# video-rag

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sh
.github/workflows/: deploy.yml
kubrick-api/: .dockerignore  Dockerfile  main.py  pyproject.toml
kubrick-api/src/kubrick_api/: api.py  config.py  mcp_client.py  models.py  opik_utils.py  tools.py
kubrick-api/src/kubrick_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kubrick-api/src/kubrick_api/agent/: __init__.py  base_agent.py  memory.py
kubrick-api/src/kubrick_api/agent/groq/: groq_agent.py  groq_tool.py
kubrick-api/src/kubrick_api/auth/: dependencies.py  schema.py  security.py  service.py
kubrick-api/src/kubrick_api/chat/: service.py
kubrick-api/src/kubrick_api/db/: db.py
kubrick-api/src/kubrick_api/db/models/: __init__.py  chat.py  user.py
kubrick-api/src/kubrick_api/routes/: __init__.py  auth.py  chat.py  video.py
kubrick-mcp/: .dockerignore  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml  test.py
kubrick-mcp/.records/: registry_2026-01-2418:42:24.json  registry_2026-01-3114:23:25.json  registry_2026-02-0717:57:29.json
kubrick-mcp/notebooks/: video_ingestion_process.ipynb
kubrick-mcp/src/kubrick_mcp/: config.py  prompts.py  resources.py  server.py  tools.py
kubrick-mcp/src/kubrick_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kubrick-mcp/src/kubrick_mcp/video/: video_search_engine.py
kubrick-mcp/src/kubrick_mcp/video/ingestion/: functions.py  models.py  registry.py  tools.py  video_processor.py
kubrick-ui/: Dockerfile  package-lock.json  package.json
kubrick-ui/app/: page.tsx
kubrick-ui/app/chat/: page.tsx
kubrick-ui/app/login/: page.tsx
kubrick-ui/app/register/: page.tsx  register.tsx
kubrick-ui/components/: image_preview.tsx  message_input.tsx  message_list.tsx  upload_context.tsx  upload_list.tsx  upload_video.tsx  video_preview.tsx
kubrick-ui/context/: message-context.tsx  upload_context.tsx
kubrick-ui/lib/: api-client.ts
